<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ListaDePacotesActivity">

    <ImageView
        android:id="@+id/lista_pacotes_banner_backgroud"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/banner_height"
        android:contentDescription="@string/banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/purple_500" />

    <TextView
        android:id="@+id/lista_pacotes_especiais"
        style="@style/Widget.AluraViagens.TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/banner_text_margin"
        android:text="@string/banner_especiais"
        app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner_backgroud"
        app:layout_constraintEnd_toEndOf="@id/lista_pacotes_banner_backgroud"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/lista_pacotes_banner_backgroud"
        app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner_backgroud"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lista_pacotes_subtitle"
        style="@style/Widget.AluraViagens.TextView.SubTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:text="@string/banner_country_brasil"
        app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
        app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais" />

    <ListView
        android:id="@+id/lista_de_pacotes_listview"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/match_constraint"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lista_pacotes_banner_backgroud"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_pacote" />
</androidx.constraintlayout.widget.ConstraintLayout>