<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResumoCompraActivity">

    <ImageView
        android:id="@+id/resumo_compra_banner"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/resumo_compra_banner_height"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_orange_dark"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_banner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/banner_main_label_parabens"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/resumo_compra_banner_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/resumo_compra_banner"
        app:layout_constraintStart_toStartOf="@id/resumo_compra_banner"
        app:layout_constraintTop_toTopOf="@id/resumo_compra_banner"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_banner_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:text="@string/banner_subtitle_label_parabens"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/banner_subttitle_text_size_1"
        app:layout_constraintBottom_toBottomOf="@id/resumo_compra_banner"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner_title"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner_title"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_banner_title"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/resumo_compra_label_resumo_da_compra"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:text="@string/confira_o_resumo_da_compra_label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_banner" />

    <ImageView
        android:id="@+id/resumo_compra_pacote_image"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/resumo_compra_pacote_image_size"
        android:layout_marginTop="@dimen/margin_between_elements"
        android:contentDescription="@string/imagem_ilustrativa_da_cidade_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_label_resumo_da_compra"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textSize="@dimen/banner_subttitle_text_size_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_pacote_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/resumo_compra_pacote_periodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textSize="@dimen/banner_subttitle_text_size_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_pacote_local"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/resumo_compra_pacote_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_between_elements"
        android:textSize="@dimen/banner_subttitle_text_size_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_pacote_periodo"
        tools:text="R$ 243,99" />

</androidx.constraintlayout.widget.ConstraintLayout>